--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,7 @@
-discord.py
+aiohttp>=3.3.2
+async-timeout==3.0.0
+chardet==3.0.4
+multidict==4.3.1
+websockets>=6.0
+pynacl>=1.2.1
+git+git://github.com/Rapptz/discord.py@async#discord.py
