--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,4 @@ chardet==3.0.4
 multidict==4.3.1
 websockets>=6.0
 pynacl>=1.2.1
-git+git://github.com/Rapptz/discord.py@rewrite#discord.py
+git+git://github.com/Rapptz/discord.py@rewrite#discord.py[voice]
