--- a/soundboardbot/templates/board.template
+++ b/soundboardbot/templates/board.template
@@ -5,6 +5,9 @@ from glob import glob
 
 from discord.ext import commands
 
+from soundboardbot.config.constants import BOT_USER_ROLE_NAME
+from soundboardbot.utils import sb_utils
+
 RESERVED_SUBCOMMANDS = ['clips', 'help']
 
 if not discord.opus.is_loaded():
@@ -27,10 +30,18 @@ class <className>:
         if arg in RESERVED_SUBCOMMANDS:
             await self.reserved_commands(self, ctx, arg)
         else:
+            await ctx.message.delete()
+            if sb_utils.has_role(member=ctx.message.author, role_name=BOT_USER_ROLE_NAME):
+                voice = await ctx.author.voice.channel.connect()
+                file = f'boards/<commandName>/{arg}.mp3'
+                voice.play(discord.FFmpegPCMAudio(file), after=lambda e: print('done', e))
 
-            voice = await ctx.author.voice.channel.connect()
-            file = 'boards/<commandName>/' + arg + '.mp3'
-            voice.play(discord.FFmpegPCMAudio(file), after=lambda e: print('done', e))
+                while voice.is_playing():
+                    await asyncio.sleep(1)
+
+                await voice.disconnect()
+            else:
+                await ctx.message.author.send('You are not registered to use the bot. Type !register to register yourself.')
 
     def disconnect_voice(self, voice, bot):
         coroutine = voice.disconnect()
@@ -60,6 +71,8 @@ class <className>:
             os.chdir(cwd)
 
             await ctx.message.author.send(clips)
+
+        await ctx.message.delete()
 
 
 def setup(bot):
